18_reverse_str/grade.txt
Grading at Mon Jun 15 21:07:32 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:11:14: error: expected ‘)’ before ‘!’ token
   if (len==0 !! str==NULL) {return;}
              ^
The code did not compile!

Overall Grade: F
